--- a/.gitignore
+++ b/.gitignore
@@ -1,31 +1,70 @@
-# Node.js dependencies
+# Dependencies
 node_modules/
-
-# Environment variables
-.env
-
-# Logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-pnpm-debug.log*
 
-# Build outputs
-dist/
-build/
-.vercel/
-.railway/
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-# IDEs and editors
-.idea/
+# Logs
+logs
+*.log
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# Coverage directory used by tools like istanbul
+coverage/
+
+# nyc test coverage
+.nyc_output
+
+# Dependency directories
+node_modules/
+jspm_packages/
+
+# Optional npm cache directory
+.npm
+
+# Optional REPL history
+.node_repl_history
+
+# Output of 'npm pack'
+*.tgz
+
+# Yarn Integrity file
+.yarn-integrity
+
+# dotenv environment variables file
+.env
+
+# Uploads and temporary files
+uploads/
+applicants/
+temp/
+
+# IDE files
 .vscode/
+.idea/
 *.swp
+*.swo
 
-# OS files
+# OS generated files
 .DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
 Thumbs.db
 
-# Uploads / images (الملفات اللي بيترفعها المستخدم)
-uploads/
-images/*
-!images/.gitkeep
+# Vercel
+.vercel
