--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+    "start": "node app.js",
+    "dev": "nodemon app.js",
+    "vercel-build": "bash vercel-build.sh"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   },
   "author": "",
   "license": "ISC",
@@ -21,5 +26,8 @@
     "nodemailer": "^6.9.15",
     "pdfmake": "^0.2.12",
     "uuid": "^10.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.0"
   }
 }
